<resources>
    <string name="app_name">Stegano</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="menu_codificar">Codificar</string>
    <string name="codificar">Codificar</string>
    <string name="menu_decodificar">Decodificar</string>
    <string name="menu_principal">Principal</string>
    <string name="menu_config">Configurações</string>
    <string name="menu_sair">Sair</string>

    <string name="selecionar">Selecione uma imagem</string>
    <string name="tirar">Tire uma foto</string>
    <string name="galeria">Escolha da galeria</string>
    <string name="selecionar_f">Selecione</string>
    <string name="cancelar">Cancelar</string>

    <string name="Procurar">Procurar</string>
    <string name="Camera">Camera</string>
    <string name="copy">COPIAR</string>
    <string name="save">SALVAR</string>
    <string name="colar">COLAR</string>
    <string name="apagar">APAGAR</string>
    <string name="buscar">BUSCAR</string>
    <string name="decodificar">DECODIFICAR</string>


    <string name="decode_message">Aparecera aqui</string>


    <string-array name="tittles_tab_cod">
        <item>Codificar</item>
        <item>Decodificar</item>
        <item>Mais</item>
    </string-array>

    <string-array name="tittles_tab_cod_1">
        <item>Image</item>
        <item>Texto</item>
        <item>Revisao</item>
    </string-array>

</resources>
